--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
   "name": "lorejs",
   "version": "1.0.0",
-  "description": "A text adventure engine for Node.js and browser",
-  "main": "index.js",
+  "description": "A text adventure engine for Node.JS and Browsers",
+  "main": "lore.js",
   "scripts": {
     "test": "node index.js"
   },
+  "keywords": [
+    "javascript",
+    "repl",
+    "game-engine"
+  ],
   "author": "RetoraDev",
-  "license": "ISC"
+  "license": "Apache-2.0"
 }
