--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lorejs",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A text adventure engine for Node.JS and Browsers",
   "main": "lore.js",
   "scripts": {
@@ -10,6 +10,7 @@
   "keywords": [
     "javascript",
     "repl",
+    "text-based",
     "game-engine"
   ],
   "repository": {
